# RAG-agent-system-onboarding-employees

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  Атрошенко_Богдан_Сергеевич_ИВТ41БО_Дипломная_Работа.docx  Дипломная_работа.docx  Текст_защиты.md
docs/: access_requests.md  api_design_standards.md  architecture_overview.md  ci_cd_pipeline.md  code_review_guidelines.md  data_classification_policy.md  database_migrations.md  dev_environment_setup.md  documentation_standards.md  equipment_and_peripherals.md  expense_reimbursement.md  first_day_checklist.md  git_flow.md  grade_review_template.md  grade_system.md  hiring_referral_program.md  incident_response.md  learning_budget.md  logging_standards.md  monitoring_and_alerting.md  offboarding.md  on_call_rotation.md  performance_review_process.md  remote_work_policy.md  rfc_process.md  secrets_management.md  security_policy.md  slack_communication_guide.md  sprint_planning_process.md  team_structure.md  technical_debt_management.md  test_environments.md  testing_guidelines.md  vacation_and_sick_leave.md  vpn_setup.md
finbridge/: config.py  main.py  utils.py
ingestion/: md_loader.py
papers/: Атрошенко_Богдан_Сергеевич_ИВТ41БО_Дипломная_Работа.docx  Вопросы_комиссии_и_ответы.md  Дневник_преддипломной_практики_заполнено.docx  Презентация_защита.pptx  Сопроводительное_письмо_Атрошенко_Богдан_ИВТ41.docx
prompts/: classifier.txt  rag_tools_explain.txt  summarization.txt  summarization_usage.txt  talker_explain.txt
research/: evaluate.py  report.py  test_dataset.json
(+43 files in other folders)
