[tool.poetry]
name = "rag-agent-system-onboarding-employees"
version = "0.1.0"
description = ""
authors = ["bs.atroshenko <bogdanatrosenko@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
