[tool.poetry]
name = "rag-agent-system-onboarding-employees"
version = "0.1.0"
description = ""
authors = ["bs.atroshenko <bogdanatrosenko@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
qdrant-client = "1.17.1"
fastapi = "0.135.3"
langchain = "^1.2.15"
langchain-qdrant = "^1.1.0"
openai = "^2.30.0"
sentence-transformers = "^5.3.0"
dotenv = "^0.9.9"
pydantic-settings = "^2.13.1"
langchain-huggingface = "^1.2.1"
langchain-community = "^0.4.1"
langchain-text-splitters = "^1.1.1"
uvicorn = "^0.44.0"
langchain-ollama = "^1.1.0"
gradio = "^6.12.0"
email-validator = "^2.3.0"
langgraph = "^1.1.8"
redis = "^7.4.0"
faster-whisper = "^1.2.1"
aio-pika = "^9.6.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
